RESOLVED FIXED112635
MessagePortChannel::EventData should not be exposed
https://bugs.webkit.org/show_bug.cgi?id=112635
Summary MessagePortChannel::EventData should not be exposed
Alexey Proskuryakov
Reported 2013-03-18 15:47:01 PDT
MessagePortChannel::EventData is an implementation detail that's only needed to store events in MessageQueue.
Attachments
proposed patch (15.02 KB, patch)
2013-03-18 15:52 PDT, Alexey Proskuryakov
ggaren: review+
webkit.review.bot: commit-queue-
with chromium build fix (15.04 KB, patch)
2013-03-18 16:07 PDT, Alexey Proskuryakov
webkit.review.bot: commit-queue-
Alexey Proskuryakov
Comment 1 2013-03-18 15:52:59 PDT
Created attachment 193676 [details] proposed patch
Geoffrey Garen
Comment 2 2013-03-18 15:57:33 PDT
Comment on attachment 193676 [details] proposed patch r=me
WebKit Review Bot
Comment 3 2013-03-18 16:04:41 PDT
Comment on attachment 193676 [details] proposed patch Attachment 193676 [details] did not pass chromium-ews (chromium-xvfb): Output: http://webkit-commit-queue.appspot.com/results/17136536
Alexey Proskuryakov
Comment 4 2013-03-18 16:07:58 PDT
Created attachment 193678 [details] with chromium build fix
WebKit Review Bot
Comment 5 2013-03-18 16:49:13 PDT
Comment on attachment 193678 [details] with chromium build fix Rejecting attachment 193678 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=webkit-commit-queue.appspot.com', '--bot-id=gce-cq-04', 'validate-changelog', '--non-interactive', 193678, '--port=chromium-xvfb']" exit_code: 1 cwd: /mnt/git/webkit-commit-queue Geoff Garen found in /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog does not appear to be a valid reviewer according to committers.py. /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-commit-queue.appspot.com/results/17216396
Alexey Proskuryakov
Comment 6 2013-03-18 16:55:02 PDT
Note You need to log in before you can comment on or make changes to this bug.