Source/WebCore/dom/MessagePortChannel.cpp
@@ -32,16 +32,4 @@
 
 namespace WebCore {
 
-
-PassOwnPtr<MessagePortChannel::EventData> MessagePortChannel::EventData::create(PassRefPtr<SerializedScriptValue> message, PassOwnPtr<MessagePortChannelArray> channels)
-{
-    return adoptPtr(new EventData(message, channels));
-}
-
-MessagePortChannel::EventData::EventData(PassRefPtr<SerializedScriptValue> message, PassOwnPtr<MessagePortChannelArray> channels)
-    : m_message(message)
-    , m_channels(channels)
-{
-}
-
 } // namespace WebCore
